# todos-app-api

./: .gitignore  Makefile  Pipfile  generate.sh  main.py  pyproject.toml  run.sh
app/: __init__.py  main.py  serve.py
app/database/: db.py
app/database/models/: base.py  collection.py  list.py  todo.py  todo_item.py  user.py
app/generate/: swagger.yaml  yaml.py
app/routes/: collection.py  docs.py  error.py  list.py  todo.py  todo_item.py  user.py
app/swagger-ui/: swagger.json
app/utils/: decorators.py  error.py  getBody.py  jwt.py  jwt_helper.py  orm_helper.py  patch_mount.py  res.py  validator_helper.py  validators.py
public/: index.html  swagger.json
tests/: test_base.py
tests/database/: test_db.py
tests/routes/: test_user.py
tests/utils/: test_decorators.py  test_jwt_helper.py  test_validator_helper.py
