[tool.poetry]
name = "todos-app"
version = "0.1.0"
description = "Todos app using bottle and vue"
authors = ["Muhamed-Rabie <elmdarym@incubaid.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"
SQLAlchemy = "^1.4.22"
py-dotenv = "^0.1"
PyMySQL = "^1.0.2"
cryptography = "^3.4.7"
SQLAlchemy-Utils = "^0.37.8"
bcrypt = "^3.2.0"
PyJWT = "^2.1.0"
pydantic = "^1.8.2"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
